# sagitta-rs

./: .editorconfig  .gitignore  CONTEXT.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  codecov.yml  deny.toml  renovate.json  rustfmt.toml  sagitta.example.toml
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: work.yaml
.github/actions/report-scan-failure/: action.yaml  run.sh
.github/instructions/: checks.instructions.md  commit.instructions.md  examples.instructions.md  pr.instructions.md  project-context.instructions.md  project-description.instructions.md  terminology.instructions.md
.github/workflows/: add-to-project.yaml  audit.yaml  ci.yaml  release.yaml  sync-branches.yaml  tag-on-release.yaml
crates/sagitta/: Cargo.toml
crates/sagitta/benches/: sagitta_bench.rs
crates/sagitta/examples/: custom_server.rs
crates/sagitta/src/: auth.rs  catalog.rs  config.rs  error.rs  extension.rs  interceptor.rs  lib.rs  main.rs  memory.rs  metadata.rs  provider.rs  rpc_metrics.rs  server.rs  service.rs  sql.rs  store.rs  types.rs
docker/: Dockerfile  Dockerfile.release  docker-compose.yaml
