[workspace]
resolver = "2"
members = ["crates/sagitta"]

[workspace.package]
version = "0.1.5"
edition = "2024"
description = "Rust framework for building analytical data services on Arrow Flight and DataFusion."
license = "Apache-2.0"
repository = "https://github.com/qualithm/sagitta-rs"
rust-version = "1.95"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
datafusion = "53"
